@@ -1,0 +1,68 @@
+.. _topics-actions:
+
+=======
+Actions
+=======
+
+Actions are used to describe specific behaviors in the client.
+
+There are four types of actions:
+
+    * Report
+
+    * Window
+
+    * Wizard
+
+    * URL
+
+
+Keyword
+-------
+
+Keywords define where to display the action in the client.
+
+There are six places:
+
+    * Open tree (`tree_open`)
+
+    * Action tree (`tree_action`)
+
+    * Print form (`form_print`)
+
+    * Action form (`form_action`)
+
+    * Form relate (`form_relate`)
+
+    * Open Graph (`graph_open`)
+
+Report
+======
+
+.. TODO
+
+Window
+======
+
+The window action describe how to create a new tab in the client.
+
+View
+----
+
+.. TODO
+
+Domain
+------
+
+The window action could have a list of domains which could be activated on the
+view.
+
+Wizard
+======
+
+.. TODO
+
+URL
+===
+
+.. TODO
