@@ -1,3 +1,5 @@
+* Add domains on Action Window
+
 Version 2.6.0 - 2012-10-22
 * Bug fixes (see mercurial logs for details)
 * Add pre-validation
